Use fallback frame rate in MediaDevicesManager::GetVideoInputFormats()

Some devices report zero frame rates in their supported video formats
and this makes getUserMedia() fail if frame-rate constraints are used.

This CL replaces zero frame rates with a fallback frame rate to work
around this issue.

Bug: 862325
Change-Id: If7e844856d9652480ed6bca607037dc0a4b9b7c4
Reviewed-on: https://chromium-review.googlesource.com/1136642
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575096}
Former-commit-id: 5f2f53511ff7caca516d4565faac10ec001dace1